add implementation of salesmanager